--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
-rootProject.name = 'reactive-spring-webflux'
-include 'reactive-programming-using-reactor'
+rootProject.name = 'Reactive-Spring'
+include 'movies-review-service'
+include 'movies-service'
 include 'movies-info-service'
+include 'reactive-programming-using-reactor'
